--- a/app/src/main/res/layout/edit_delete_comments.xml
+++ b/app/src/main/res/layout/edit_delete_comments.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userimg_editcomment1"
+        android:id="@+id/userimg_userprofile"
         android:layout_width="57dp"
         android:layout_height="56dp"
         android:layout_marginStart="10dp"
@@ -30,7 +30,7 @@
         android:textColor="#000000"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userimg_editcomment1" />
+        app:layout_constraintTop_toBottomOf="@+id/userimg_userprofile" />
 
     <ImageView
         android:id="@+id/edit_comment_btn"
@@ -58,6 +58,6 @@
         android:ems="10"
         android:hint="Commnet"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/userimg_editcomment1"
+        app:layout_constraintStart_toEndOf="@+id/userimg_userprofile"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
