--- a/app/src/main/res/layout/activity_commnet_.xml
+++ b/app/src/main/res/layout/activity_commnet_.xml
@@ -52,10 +52,10 @@
         android:textColor="#070E3A"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userimg_editcomment1" />
+        app:layout_constraintTop_toBottomOf="@+id/userimg_userprofile" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userimg_editcomment1"
+        android:id="@+id/userimg_userprofile"
         android:layout_width="68dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
@@ -138,7 +138,7 @@
         android:hint="Comment"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/userimg_editcomment1" />
+        app:layout_constraintStart_toEndOf="@+id/userimg_userprofile" />
 
     <TextView
         android:id="@+id/desc_post_com"
