--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -7,7 +7,7 @@
     tools:context=".RegisterationForm">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userimg_editcomment1"
+        android:id="@+id/userimg_userprofile"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginStart="135dp"
