--- a/app/src/main/res/layout/show_message_home.xml
+++ b/app/src/main/res/layout/show_message_home.xml
@@ -50,10 +50,10 @@
         android:text="TextView"
         android:textColor="#0C1A71"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userimg_editcomment1" />
+        app:layout_constraintTop_toBottomOf="@+id/userimg_userprofile" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userimg_editcomment1"
+        android:id="@+id/userimg_userprofile"
         android:layout_width="68dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -111,6 +111,6 @@
         app:layout_constraintEnd_toStartOf="@+id/message_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_img"
-        app:srcCompat="@drawable/like" />
+        app:srcCompat="@drawable/ic_not_favourite" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
